// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runServer should authenticate users 1`] = `
Object {
  "data": Object {
    "transactions": Object {
      "1": Object {
        "errored": false,
        "id": "1",
        "ip": "127.0.0.1",
        "method": "GET",
        "protocol": "http",
        "reqHeaders": Object {
          "accept": "application/json, text/plain, */*",
          "authorization": "Bearer eyJ...xZ0",
          "connection": "close",
          "host": "localhost:9999",
          "user-agent": "__avoid_axios_version__",
        },
        "startInBytes": 370,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "url": "/v4/diag",
      },
    },
  },
  "debugCalls": Array [
    Array [
      "⏳ - Cleared a delay",
    ],
    Array [
      "⏳ - Created a delay:",
      30000,
    ],
  ],
  "headers": Object {
    "access-control-allow-headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS",
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "transaction-id": "1",
    "transfer-encoding": "chunked",
    "vary": "Origin",
    "x-authenticated": "{\\"scope\\":\\"admin\\",\\"userId\\":\\"1\\",\\"applicationId\\":\\"1\\",\\"iat\\":1390694400,\\"exp\\":1390867200,\\"nbf\\":1390694400}",
  },
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      "CALL",
      "{\\"id\\":\\"1\\",\\"protocol\\":\\"http\\",\\"ip\\":\\"127.0.0.1\\",\\"startInBytes\\":370,\\"startOutBytes\\":0,\\"startTime\\":1390694400000,\\"url\\":\\"/v4/diag\\",\\"method\\":\\"GET\\",\\"reqHeaders\\":{\\"accept\\":\\"application/json, text/plain, */*\\",\\"authorization\\":\\"Bearer eyJ...xZ0\\",\\"user-agent\\":\\"__avoid_axios_version__\\",\\"host\\":\\"localhost:9999\\",\\"connection\\":\\"close\\"},\\"errored\\":false,\\"endTime\\":1390694400000,\\"endInBytes\\":370,\\"endOutBytes\\":894,\\"statusCode\\":200,\\"resHeaders\\":{\\"content-type\\":\\"application/json\\",\\"X-Authenticated\\":\\"{\\\\\\"scope\\\\\\":\\\\\\"admin\\\\\\",\\\\\\"userId\\\\\\":\\\\\\"1\\\\\\",\\\\\\"applicationId\\\\\\":\\\\\\"1\\\\\\",\\\\\\"iat\\\\\\":1390694400,\\\\\\"exp\\\\\\":1390867200,\\\\\\"nbf\\\\\\":1390694400}\\",\\"access-control-allow-origin\\":\\"*\\",\\"access-control-allow-methods\\":\\"GET,POST,PUT,DELETE,OPTIONS\\",\\"access-control-allow-headers\\":\\"Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent\\",\\"vary\\":\\"Origin\\"},\\"operationId\\":\\"getDiagnostic\\"}",
    ],
  ],
  "status": 200,
}
`;

exports[`runServer should fail with bad fake tokens 1`] = `
Object {
  "data": Object {
    "error": "invalid_fake_token",
    "error_debug_data": Object {
      "guruMeditation": "2",
    },
    "error_description": "The provided token (\\"e-admin\\") do not match",
  },
  "debugCalls": Array [
    Array [
      "⏳ - Cleared a delay",
    ],
    Array [
      "⏳ - Created a delay:",
      30000,
    ],
  ],
  "headers": Object {
    "access-control-allow-headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS",
    "access-control-allow-origin": "*",
    "cache-control": "private",
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "transaction-id": "2",
    "transfer-encoding": "chunked",
    "vary": "Origin",
  },
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      "CALL",
      "{\\"id\\":\\"2\\",\\"protocol\\":\\"http\\",\\"ip\\":\\"127.0.0.1\\",\\"startInBytes\\":175,\\"startOutBytes\\":0,\\"startTime\\":1390694400000,\\"url\\":\\"/v4/diag\\",\\"method\\":\\"GET\\",\\"reqHeaders\\":{\\"accept\\":\\"application/json, text/plain, */*\\",\\"authorization\\":\\"Fa...n\\",\\"user-agent\\":\\"__avoid_axios_version__\\",\\"host\\":\\"localhost:9999\\",\\"connection\\":\\"close\\"},\\"errored\\":true,\\"endTime\\":1390694400000,\\"endInBytes\\":175,\\"endOutBytes\\":588,\\"statusCode\\":400,\\"resHeaders\\":{\\"content-type\\":\\"application/json\\",\\"access-control-allow-origin\\":\\"*\\",\\"access-control-allow-methods\\":\\"GET,POST,PUT,DELETE,OPTIONS\\",\\"access-control-allow-headers\\":\\"Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent\\",\\"vary\\":\\"Origin\\",\\"cache-control\\":\\"private\\"},\\"operationId\\":\\"getDiagnostic\\"}",
    ],
  ],
  "status": 400,
}
`;

exports[`runServer should ping 1`] = `
Object {
  "data": Object {
    "pong": "pong",
  },
  "debugCalls": Array [
    Array [
      "⏳ - Cleared a delay",
    ],
    Array [
      "⏳ - Created a delay:",
      30000,
    ],
    Array [
      "🔓 - Public endpoint detected, letting the call pass through!",
    ],
  ],
  "headers": Object {
    "access-control-allow-headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS",
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
    "vary": "Origin",
    "x-node-env": "test",
  },
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      "CALL",
      "{\\"id\\":\\"0\\",\\"protocol\\":\\"http\\",\\"ip\\":\\"127.0.0.1\\",\\"startInBytes\\":146,\\"startOutBytes\\":0,\\"startTime\\":1390694400000,\\"url\\":\\"/v4/ping\\",\\"method\\":\\"GET\\",\\"reqHeaders\\":{\\"accept\\":\\"application/json, text/plain, */*\\",\\"user-agent\\":\\"__avoid_axios_version__\\",\\"host\\":\\"localhost:9999\\",\\"connection\\":\\"close\\"},\\"errored\\":false,\\"endTime\\":1390694400000,\\"endInBytes\\":146,\\"endOutBytes\\":447,\\"statusCode\\":200,\\"resHeaders\\":{\\"content-type\\":\\"application/json\\",\\"X-Node-ENV\\":\\"test\\",\\"access-control-allow-origin\\":\\"*\\",\\"access-control-allow-methods\\":\\"GET,POST,PUT,DELETE,OPTIONS\\",\\"access-control-allow-headers\\":\\"Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent\\",\\"vary\\":\\"Origin\\"},\\"operationId\\":\\"getPing\\"}",
    ],
  ],
  "status": 200,
}
`;

exports[`runServer should work 1`] = `
Object {
  "debugCalls": Array [
    Array [
      "Error: ENOENT: no such file or directory, open '/home/whoiam/projects/whook/packages/whook-example/.env.test'",
    ],
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "♻️ - Loading the environment service.",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "➰ - Plugin \\"@whook/cli\\" resolved to \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist\\".",
    ],
    Array [
      "➰ - Plugin \\"@whook/cors\\" resolved to \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist\\".",
    ],
    Array [
      "➰ - Plugin \\"@whook/graphql\\" resolved to \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist\\".",
    ],
    Array [
      "➰ - Plugin \\"@whook/whook\\" resolved to \\"/home/nfroidure/nfroidure/whook/packages/whook/dist\\".",
    ],
    Array [
      "🈁 - Generated the BASE_URL constant \\"http://localhost:9999\\".",
    ],
    Array [
      "🈁 - Generating the API_DEFINITIONS",
    ],
    Array [
      "🈁 - Handler module at \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\" exports no definition!",
    ],
    Array [
      "🏭 - Initializing the CONFIGS service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "💿 - Loading \\"API\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/API.ts\\".",
    ],
    Array [
      "💿 - Loading \\"BASE_URL\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/BASE_URL\\".",
    ],
    Array [
      "💿 - Loading \\"FILTER_API_TAGS\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts\\".",
    ],
    Array [
      "💿 - Loading \\"MECHANISMS\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MECHANISMS.ts\\".",
    ],
    Array [
      "💿 - Loading \\"QUERY_PARSER\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/QUERY_PARSER.ts\\".",
    ],
    Array [
      "💿 - Loading \\"WRAPPERS\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/WRAPPERS.ts\\".",
    ],
    Array [
      "💿 - Loading \\"authentication\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/authentication.ts\\".",
    ],
    Array [
      "💿 - Loading \\"getDelayWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDelay.ts\\".",
    ],
    Array [
      "💿 - Loading \\"getDiagnosticWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDiagnostic.ts\\".",
    ],
    Array [
      "💿 - Loading \\"getGraphQLWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getGraphQL.ts\\".",
    ],
    Array [
      "💿 - Loading \\"getOpenAPIWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getOpenAPI.ts\\".",
    ],
    Array [
      "💿 - Loading \\"getParametersWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getParameters.ts\\".",
    ],
    Array [
      "💿 - Loading \\"getPingWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/getPing\\".",
    ],
    Array [
      "💿 - Loading \\"getTimeWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getTime.ts\\".",
    ],
    Array [
      "💿 - Loading \\"jwtToken\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/jwtToken.ts\\".",
    ],
    Array [
      "💿 - Loading \\"optionsWithCORSWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "💿 - Loading \\"postGraphQL\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "💿 - Loading \\"postGraphQLWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "💿 - Loading \\"putEchoWrapped\\" initializer from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/putEcho.ts\\".",
    ],
    Array [
      "💿 - Service \\"API\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/API.ts\\".",
    ],
    Array [
      "💿 - Service \\"BASE_URL\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/BASE_URL\\".",
    ],
    Array [
      "💿 - Service \\"FILTER_API_TAGS\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts\\".",
    ],
    Array [
      "💿 - Service \\"MECHANISMS\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MECHANISMS.ts\\".",
    ],
    Array [
      "💿 - Service \\"QUERY_PARSER\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/QUERY_PARSER.ts\\".",
    ],
    Array [
      "💿 - Service \\"WRAPPERS\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/WRAPPERS.ts\\".",
    ],
    Array [
      "💿 - Service \\"authentication\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/authentication.ts\\".",
    ],
    Array [
      "💿 - Service \\"getDelayWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDelay.ts\\".",
    ],
    Array [
      "💿 - Service \\"getDiagnosticWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDiagnostic.ts\\".",
    ],
    Array [
      "💿 - Service \\"getGraphQLWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getGraphQL.ts\\".",
    ],
    Array [
      "💿 - Service \\"getOpenAPIWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getOpenAPI.ts\\".",
    ],
    Array [
      "💿 - Service \\"getParametersWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getParameters.ts\\".",
    ],
    Array [
      "💿 - Service \\"getPingWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/getPing\\".",
    ],
    Array [
      "💿 - Service \\"getTimeWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getTime.ts\\".",
    ],
    Array [
      "💿 - Service \\"jwtToken\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/jwtToken.ts\\".",
    ],
    Array [
      "💿 - Service \\"optionsWithCORSWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "💿 - Service \\"postGraphQL\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "💿 - Service \\"postGraphQLWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "💿 - Service \\"putEchoWrapped\\" found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/putEcho.ts\\".",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getDelay\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getDiagnostic\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getGraphQL\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getOpenAPI\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getParameters\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getPing\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getTime\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"optionsWithCORS\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"postGraphQL\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"putEcho\\".",
    ],
    Array [
      "🔧 - Initializing auth mechanisms",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🕸️ - Initializing the GraphQL Service",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "🚫 - Could not load \\".env.test\\" file.",
    ],
    Array [
      "🚫 - Service \\"BASE_URL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/BASE_URL\\".",
    ],
    Array [
      "🚫 - Service \\"BASE_URL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/BASE_URL\\".",
    ],
    Array [
      "🚫 - Service \\"BASE_URL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/BASE_URL\\".",
    ],
    Array [
      "🚫 - Service \\"BUFFER_LIMIT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/BUFFER_LIMIT\\".",
    ],
    Array [
      "🚫 - Service \\"BUFFER_LIMIT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/BUFFER_LIMIT\\".",
    ],
    Array [
      "🚫 - Service \\"BUFFER_LIMIT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/BUFFER_LIMIT\\".",
    ],
    Array [
      "🚫 - Service \\"BUFFER_LIMIT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/BUFFER_LIMIT\\".",
    ],
    Array [
      "🚫 - Service \\"BUFFER_LIMIT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/BUFFER_LIMIT\\".",
    ],
    Array [
      "🚫 - Service \\"DECODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/DECODERS\\".",
    ],
    Array [
      "🚫 - Service \\"DECODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/DECODERS\\".",
    ],
    Array [
      "🚫 - Service \\"DECODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/DECODERS\\".",
    ],
    Array [
      "🚫 - Service \\"DECODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/DECODERS\\".",
    ],
    Array [
      "🚫 - Service \\"DECODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/DECODERS\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_ERROR_CODE\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/DEFAULT_ERROR_CODE\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_ERROR_CODE\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/DEFAULT_ERROR_CODE\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_ERROR_CODE\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/DEFAULT_ERROR_CODE\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_ERROR_CODE\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/DEFAULT_ERROR_CODE\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_ERROR_CODE\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/DEFAULT_ERROR_CODE\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/DEFAULT_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/DEFAULT_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/DEFAULT_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/DEFAULT_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEFAULT_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/DEFAULT_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/DEV_ACCESS_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/DEV_ACCESS_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/DEV_ACCESS_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/DEV_ACCESS_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_MECHANISM\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/DEV_ACCESS_MECHANISM\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_TOKEN\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/DEV_ACCESS_TOKEN\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_TOKEN\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/DEV_ACCESS_TOKEN\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_TOKEN\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/DEV_ACCESS_TOKEN\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_TOKEN\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/DEV_ACCESS_TOKEN\\".",
    ],
    Array [
      "🚫 - Service \\"DEV_ACCESS_TOKEN\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/DEV_ACCESS_TOKEN\\".",
    ],
    Array [
      "🚫 - Service \\"ENCODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/ENCODERS\\".",
    ],
    Array [
      "🚫 - Service \\"ENCODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/ENCODERS\\".",
    ],
    Array [
      "🚫 - Service \\"ENCODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/ENCODERS\\".",
    ],
    Array [
      "🚫 - Service \\"ENCODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/ENCODERS\\".",
    ],
    Array [
      "🚫 - Service \\"ENCODERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/ENCODERS\\".",
    ],
    Array [
      "🚫 - Service \\"GRAPHQL_SERVER_OPTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/GRAPHQL_SERVER_OPTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"GRAPHQL_SERVER_OPTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/GRAPHQL_SERVER_OPTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"GRAPHQL_SERVER_OPTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/GRAPHQL_SERVER_OPTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"GRAPHQL_SERVER_OPTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/GRAPHQL_SERVER_OPTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"GRAPHQL_SERVER_OPTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/GRAPHQL_SERVER_OPTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_PREFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/IGNORED_FILES_PREFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_PREFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/IGNORED_FILES_PREFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_PREFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/IGNORED_FILES_PREFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_PREFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/IGNORED_FILES_PREFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_PREFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/IGNORED_FILES_PREFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/IGNORED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/IGNORED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/IGNORED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/IGNORED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"IGNORED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/IGNORED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"JWT_SECRET_ENV_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/JWT_SECRET_ENV_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"JWT_SECRET_ENV_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/JWT_SECRET_ENV_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"JWT_SECRET_ENV_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/JWT_SECRET_ENV_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"JWT_SECRET_ENV_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/JWT_SECRET_ENV_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"JWT_SECRET_ENV_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/JWT_SECRET_ENV_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/KEEP_ALIVE_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/KEEP_ALIVE_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/KEEP_ALIVE_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/KEEP_ALIVE_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/KEEP_ALIVE_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_CHARS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/MAX_CLEAR_CHARS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_CHARS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/MAX_CLEAR_CHARS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_CHARS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MAX_CLEAR_CHARS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_CHARS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/MAX_CLEAR_CHARS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_CHARS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/MAX_CLEAR_CHARS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_RATIO\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/MAX_CLEAR_RATIO\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_RATIO\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/MAX_CLEAR_RATIO\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_RATIO\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MAX_CLEAR_RATIO\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_RATIO\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/MAX_CLEAR_RATIO\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CLEAR_RATIO\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/MAX_CLEAR_RATIO\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CONNECTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/MAX_CONNECTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CONNECTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/MAX_CONNECTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CONNECTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MAX_CONNECTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CONNECTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/MAX_CONNECTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_CONNECTIONS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/MAX_CONNECTIONS\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_HEADERS_COUNT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/MAX_HEADERS_COUNT\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_HEADERS_COUNT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/MAX_HEADERS_COUNT\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_HEADERS_COUNT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MAX_HEADERS_COUNT\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_HEADERS_COUNT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/MAX_HEADERS_COUNT\\".",
    ],
    Array [
      "🚫 - Service \\"MAX_HEADERS_COUNT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/MAX_HEADERS_COUNT\\".",
    ],
    Array [
      "🚫 - Service \\"PARSERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/PARSERS\\".",
    ],
    Array [
      "🚫 - Service \\"PARSERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/PARSERS\\".",
    ],
    Array [
      "🚫 - Service \\"PARSERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/PARSERS\\".",
    ],
    Array [
      "🚫 - Service \\"PARSERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/PARSERS\\".",
    ],
    Array [
      "🚫 - Service \\"PARSERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/PARSERS\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_ENV\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/PROCESS_ENV\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_ENV\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/PROCESS_ENV\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_ENV\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/PROCESS_ENV\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_ENV\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/PROCESS_ENV\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_ENV\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/PROCESS_ENV\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/PROCESS_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/PROCESS_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/PROCESS_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/PROCESS_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"PROCESS_NAME\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/PROCESS_NAME\\".",
    ],
    Array [
      "🚫 - Service \\"PROTOCOL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/PROTOCOL\\".",
    ],
    Array [
      "🚫 - Service \\"PROTOCOL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/PROTOCOL\\".",
    ],
    Array [
      "🚫 - Service \\"PROTOCOL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/PROTOCOL\\".",
    ],
    Array [
      "🚫 - Service \\"PROTOCOL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/PROTOCOL\\".",
    ],
    Array [
      "🚫 - Service \\"PROTOCOL\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/PROTOCOL\\".",
    ],
    Array [
      "🚫 - Service \\"REDUCED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/REDUCED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"REDUCED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/REDUCED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"REDUCED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/REDUCED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"REDUCED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/REDUCED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"REDUCED_FILES_SUFFIXES\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/REDUCED_FILES_SUFFIXES\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_HEADERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/SENSIBLE_HEADERS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_HEADERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/SENSIBLE_HEADERS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_HEADERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/SENSIBLE_HEADERS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_HEADERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/SENSIBLE_HEADERS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_HEADERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/SENSIBLE_HEADERS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_PROPS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/SENSIBLE_PROPS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_PROPS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/SENSIBLE_PROPS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_PROPS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/SENSIBLE_PROPS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_PROPS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/SENSIBLE_PROPS\\".",
    ],
    Array [
      "🚫 - Service \\"SENSIBLE_PROPS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/SENSIBLE_PROPS\\".",
    ],
    Array [
      "🚫 - Service \\"SHIELD_CHAR\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/SHIELD_CHAR\\".",
    ],
    Array [
      "🚫 - Service \\"SHIELD_CHAR\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/SHIELD_CHAR\\".",
    ],
    Array [
      "🚫 - Service \\"SHIELD_CHAR\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/SHIELD_CHAR\\".",
    ],
    Array [
      "🚫 - Service \\"SHIELD_CHAR\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/SHIELD_CHAR\\".",
    ],
    Array [
      "🚫 - Service \\"SHIELD_CHAR\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/SHIELD_CHAR\\".",
    ],
    Array [
      "🚫 - Service \\"SIGNALS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/SIGNALS\\".",
    ],
    Array [
      "🚫 - Service \\"SIGNALS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/SIGNALS\\".",
    ],
    Array [
      "🚫 - Service \\"SIGNALS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/SIGNALS\\".",
    ],
    Array [
      "🚫 - Service \\"SIGNALS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/SIGNALS\\".",
    ],
    Array [
      "🚫 - Service \\"SIGNALS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/SIGNALS\\".",
    ],
    Array [
      "🚫 - Service \\"SOCKET_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/SOCKET_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"SOCKET_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/SOCKET_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"SOCKET_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/SOCKET_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"SOCKET_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/SOCKET_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"SOCKET_TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/SOCKET_TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"STRINGIFYERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/STRINGIFYERS\\".",
    ],
    Array [
      "🚫 - Service \\"STRINGIFYERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/STRINGIFYERS\\".",
    ],
    Array [
      "🚫 - Service \\"STRINGIFYERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/STRINGIFYERS\\".",
    ],
    Array [
      "🚫 - Service \\"STRINGIFYERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/STRINGIFYERS\\".",
    ],
    Array [
      "🚫 - Service \\"STRINGIFYERS\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/STRINGIFYERS\\".",
    ],
    Array [
      "🚫 - Service \\"TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"TIMEOUT\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/TIMEOUT\\".",
    ],
    Array [
      "🚫 - Service \\"getPingWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/handlers/getPing\\".",
    ],
    Array [
      "🚫 - Service \\"getPingWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getPing\\".",
    ],
    Array [
      "🚫 - Service \\"getPingWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/handlers/getPing\\".",
    ],
    Array [
      "🚫 - Service \\"optionsWithCORSWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🚫 - Service \\"optionsWithCORSWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🚫 - Service \\"optionsWithCORSWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🚫 - Service \\"optionsWithCORSWrapped\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🚫 - Service \\"readDir\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/readDir\\".",
    ],
    Array [
      "🚫 - Service \\"readDir\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/readDir\\".",
    ],
    Array [
      "🚫 - Service \\"readDir\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/readDir\\".",
    ],
    Array [
      "🚫 - Service \\"readDir\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/readDir\\".",
    ],
    Array [
      "🚫 - Service \\"readDir\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/readDir\\".",
    ],
    Array [
      "🚫 - Service \\"readFile\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/readFile\\".",
    ],
    Array [
      "🚫 - Service \\"readFile\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/readFile\\".",
    ],
    Array [
      "🚫 - Service \\"readFile\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/readFile\\".",
    ],
    Array [
      "🚫 - Service \\"readFile\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/readFile\\".",
    ],
    Array [
      "🚫 - Service \\"readFile\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/readFile\\".",
    ],
    Array [
      "🚫 - Service \\"uniqueId\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/services/uniqueId\\".",
    ],
    Array [
      "🚫 - Service \\"uniqueId\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/services/uniqueId\\".",
    ],
    Array [
      "🚫 - Service \\"uniqueId\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/uniqueId\\".",
    ],
    Array [
      "🚫 - Service \\"uniqueId\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/services/uniqueId\\".",
    ],
    Array [
      "🚫 - Service \\"uniqueId\\" not found in \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/uniqueId\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/config/test/config\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDelay\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDelay.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDiagnostic\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDiagnostic.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getGraphQL\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getGraphQL.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getOpenAPI\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getOpenAPI.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getParameters\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getParameters.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getTime\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getTime.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/putEcho\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/putEcho.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/API.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MECHANISMS.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/QUERY_PARSER.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/WRAPPERS.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/authentication.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/jwtToken.ts\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/getPing\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/getPing\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/BASE_URL\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"ecstatic\\".",
    ],
    Array [
      "🛂 - Dynamic import of \\"swagger-ui-dist\\".",
    ],
    Array [
      "🛂 - Initializing the importer!",
    ],
    Array [
      "🛂 - Initializing the resolve service!",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/handlers/optionsWithCORS\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDelay\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDelay.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDiagnostic\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getDiagnostic.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getGraphQL\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getGraphQL.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getOpenAPI\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getOpenAPI.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getParameters\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getParameters.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getTime\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/getTime.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/postGraphQL.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/putEcho\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/handlers/putEcho.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/API\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/API.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/FILTER_API_TAGS\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MECHANISMS\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/MECHANISMS.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/QUERY_PARSER\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/QUERY_PARSER.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/WRAPPERS\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/WRAPPERS.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/authentication\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/authentication.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/jwtToken\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/services/jwtToken.ts\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/getPing\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/handlers/getPing\\".",
    ],
    Array [
      "🛂 - Resolving \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/BASE_URL\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/services/BASE_URL\\".",
    ],
    Array [
      "🛂 - Resolving \\"@whook/cli\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-cli/dist/index\\".",
    ],
    Array [
      "🛂 - Resolving \\"@whook/cors\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-cors/dist/index\\".",
    ],
    Array [
      "🛂 - Resolving \\"@whook/graphql\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook-graphql/dist/index\\".",
    ],
    Array [
      "🛂 - Resolving \\"@whook/whook\\" to \\"/home/nfroidure/nfroidure/whook/packages/whook/dist/index\\".",
    ],
    Array [
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "🦄 - Initializing the API service!",
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "On air 🚀🌕",
    ],
    Array [
      "⚠️ - Using fake auth mechanism!",
    ],
    Array [
      "⚡ - Loading configurations from \\"/home/nfroidure/nfroidure/whook/packages/whook-example/src/config/test/config\\".",
    ],
    Array [
      "✔ - Found the project dir \\"/home/nfroidure/nfroidure/whook/packages/whook-example\\".",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:9999\\".",
    ],
    Array [
      "💁 - Serving the public API docs: http://localhost:9999/docs?url=http%3A%2F%2Flocalhost%3A9999%2Fv4%2FopenAPI",
    ],
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "🖥 - Using an isolated env.",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "JWT service initialized!",
    ],
    Array [
      "🕸️ - Serving the GraphIQL UI.",
      "http://localhost:9999/graphiql",
    ],
  ],
}
`;
